--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                     <a class="nav-link btn btn-alert navbar-btn text-white" href="{% url 'dashboard:categories' %}">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-alert navbar-btn text-white" href="#">My Courses</a>
+                    <a class="nav-link btn btn-alert navbar-btn text-white" href="{% url 'dashboard:my_courses' %}">My Courses</a>
                 </li>
             </ul>
 
@@ -102,9 +102,9 @@
                 <div class="col-md-4">
                     <h5>Follow Us</h5>
                     <ul class="list-inline">
-                        <li><a class="social-link" href="#"><i class="fab fa-facebook-f"></i> Facebook </a></li>
-                        <li><a class="social-link" href="#"><i class="fab fa-twitter"></i> Twitter </a></li>
-                        <li><a class="social-link" href="#"><i class="fab fa-instagram"></i> Instagram </a></li>
+                        <li><a class="social-link" href="#"><i class="fa fa-facebook-f"></i> Facebook </a></li>
+                        <li><a class="social-link" href="#"><i class="fa fa-twitter"></i> Twitter </a></li>
+                        <li><a class="social-link" href="#"><i class="fa fa-instagram"></i> Instagram </a></li>
                     </ul>
                 </div>
             </div>
