--- a/templates/base.html
+++ b/templates/base.html
@@ -24,14 +24,20 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-alert navbar-btn text-white" href="{% url 'dashboard:categories' %}">Categories</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link btn btn-alert navbar-btn text-white" href="{% url 'dashboard:my_courses' %}">My Courses</a>
-                </li>
+
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-alert navbar-btn text-white" href="{% url 'dashboard:my_courses' %}">My Courses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-alert navbar-btn text-white" href="{% url 'dashboard:wishlist' %}">My Wishlist</a>
+                    </li>
+                {% endif %}
             </ul>
 
             <form class="form-inline my-2 my-lg-0 mx-auto">
